# AImusic

./: .gitignore  README.md  package.json  test_minimax.py
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  globals.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/lib/: api.ts
apps/web/: next.config.ts  package.json
apps/web/app/: layout.tsx  page.tsx  providers.tsx
apps/web/app/api/generate/: route.ts
apps/web/app/api/generate/[id]/: route.ts
apps/web/components/: audio-player.tsx  audio-visualizer.tsx  generation-progress.tsx  music-card.tsx  music-history.tsx  prompt-input.tsx  theme-provider.tsx  theme-toggle.tsx  toast.tsx
apps/web/hooks/: use-audio-player.ts  use-keyboard-shortcuts.ts  use-music-generation.ts
apps/web/lib/: suno-api.ts
apps/web/stores/: music-store.ts
