[package]
name = "ai-music-generator"
version = "0.1.0"
description = "AI Music Generator Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_music_generator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
